--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,14 +2,18 @@
 @use '../components/mixins' as *;
 
 .btn-rounded {
+    @include media-breakpoint-down(sm){
+        display: none;
+    }
     position: relative;
     padding: 0.937rem 4.375rem 0.937rem 1.25rem;
-    font-weight: 500;
+    font-weight: 700;
     margin: 0;
     border: 0.1rem solid rgba($white,0.6);
-    background-color: $white;    
+    background-color: $white; 
+    transition: all 0.3s ease;   
 
-    &__span {
+    span {
         position: absolute;
         background-color: $primary;
         width: 2.5rem;
@@ -18,6 +22,7 @@
         right: 5px;
         transform: translateY(-50%);
         border-radius: 50%;
+        transition: all 0.2s ease;   
 
         i {
             color: $white;
@@ -28,5 +33,10 @@
 
     &:hover {
         @include gradient;
+        color: $white;
+
+        span {
+            background-color: rgba($black,0.6);
+        }
     }
 }
