--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -4,3 +4,20 @@
 @mixin gradient {
     background: linear-gradient(to right, rgba($primary, 0.95),rgba($secondary, 0.95));
 }
+
+// Absolute Center
+
+@mixin absoluteCenter{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+// Flex Center
+
+@mixin flexCenter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
