--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+img {
+  max-width: 100%;
+}
+
 /*!
  * Bootstrap  v5.2.3 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
@@ -10719,6 +10723,20 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+@keyframes pulse-border {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.25);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
 .btn-rounded {
   position: relative;
   padding: 0.937rem 4.375rem 0.937rem 1.25rem;
@@ -10790,6 +10808,34 @@ textarea.form-control-lg {
   padding: 10rem 0 0 0;
   width: 100%;
   height: 100%;
+}
+
+.video-box {
+  position: relative;
+}
+.video-box a {
+  line-height: 0;
+}
+.video-box-icon {
+  font-size: 6rem;
+  color: #bb6ef5;
+}
+
+.border-animation {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 6rem;
+  height: 6rem;
+  border: 0.55rem solid #fff;
+  border-radius: 50%;
+  animation: pulse-border 1.5s linear infinite;
+}
+.border-animation--border-1 {
+  animation-delay: 1s;
+}
+.border-animation--border-2 {
+  animation-delay: 2s;
 }
 
 /*# sourceMappingURL=style.css.map */
