--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -7,3 +7,32 @@
     width: 100%;
     height: 100%;
 }
+
+.video-box {
+    position: relative;
+    a {
+        line-height: 0;
+    }
+    &-icon {
+        font-size: 6rem;
+        color: $secondary;
+    }
+}
+
+.border-animation {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 6rem;
+    height: 6rem;
+    border: 0.55rem solid $white;
+    border-radius: 50%;
+    animation: pulse-border 1.5s linear infinite;
+
+    &--border-1 {
+        animation-delay: 1s;
+    }
+    &--border-2 {
+        animation-delay: 2s;
+    }
+}
