--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10790,6 +10790,12 @@ textarea.form-control-lg {
   display: block;
   margin-top: 1.2rem;
 }
+@media (min-width: 992px) {
+  .display-2--description {
+    font-size: 1.4rem;
+    display: inline-block;
+  }
+}
 
 .menu {
   background: linear-gradient(to right, rgba(153, 38, 240, 0.95), rgba(187, 110, 245, 0.95));
@@ -10801,6 +10807,7 @@ textarea.form-control-lg {
   color: #fff;
   text-transform: capitalize;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .intro-section {
