portfolio+form+footer

--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -21,3 +21,10 @@
     justify-content: center;
     align-items: center;
 }
+
+// Transition
+
+@mixin transitionProperty {
+    transition-duration: 1s;
+    transition-property: all;
+}
